Added Notifeed implementation (authorization tokens) + Corrected mistake of parsing a utf8 string as base 64